api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: hashicorp/http-echo

          args:
            - "-text=API funcionando 🚀"

          ports:
            - containerPort: 5678
