api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service

spec:
  selector:
    app: api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678

  type: ClusterIP
