service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-service

spec:
  type: NodePort

  selector:
    app: devops

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
